@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/cri
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cri-1.0.1-r1 (06 Mar 2011)
+
+  06 Mar 2011; grafi <grafi@grafi.sakura.ne.jp> +cri-1.0.1-r1.ebuild:
+  add ruby19 to USE_RUBY
 
 *cri-1.0.1 (29 Nov 2010)
 
